correct horizontal scroll bar for smaller viewports

--- a/less/index.less
+++ b/less/index.less
@@ -177,7 +177,7 @@ html, body {
 
 			@media (max-width: 500px) {
 				margin-top: 30px;
-				width: 400px;
+				width: 370px;
 			}
 		}
 
